Revise Grafana apis
