# apis/openviz/v1alpha1/dashboard_types.go
@@ -29,8 +29,10 @@ const (
 )
 
 const (
+	GrafanaNamespaceKey      = ".grafana.namespace"
 	GrafanaNameKey           = ".grafana.name"
 	GrafanaDashboardTitleKey = ".dashboard.title"
+	DefaultGrafanaKey        = "openviz.dev/is-default-grafana"
 )
 
 // +genclient
@@ -50,21 +52,23 @@ type GrafanaDashboard struct {
 }
 
 type GrafanaDashboardSpec struct {
-	// Grafana defines the grafana app binding name for the GrafanaDashboard
-	Grafana *TargetRef `json:"grafana,omitempty" protobuf:"bytes,1,opt,name=grafana"`
+	// GrafanaRef defines the grafana app binding name for the GrafanaDashboard
 	// +optional
-	// +kubebuilder:pruning:PreserveUnknownFields
-	Model *runtime.RawExtension `json:"model,omitempty" protobuf:"bytes,2,opt,name=model"`
+	GrafanaRef *kmapi.ObjectReference `json:"grafanaRef,omitempty" protobuf:"bytes,1,opt,name=grafanaRef"`
 
 	// FolderID defines the Grafana folderID
 	// +optional
-	FolderID *int64 `json:"folderID,omitempty" protobuf:"varint,3,opt,name=folderID"`
+	FolderID *int64 `json:"folderID,omitempty" protobuf:"varint,2,opt,name=folderID"`
+
+	// +optional
+	// +kubebuilder:pruning:PreserveUnknownFields
+	Model *runtime.RawExtension `json:"model,omitempty" protobuf:"bytes,3,opt,name=model"`
 
 	// Overwrite defines the existing grafanadashboard with the same name(if any) should be overwritten or not
 	// +optional
 	Overwrite bool `json:"overwrite,omitempty" protobuf:"varint,4,opt,name=overwrite"`
 
-	// Templatize defines the fields which supports templating in Grafana GrafanaDashboard Model json
+	// Templatize defines the fields which supports templating in GrafanaRef GrafanaDashboard Model json
 	// +optional
 	Templatize *ModelTemplateConfiguration `json:"templatize,omitempty" protobuf:"bytes,5,opt,name=templatize"`
 }
@@ -72,12 +76,6 @@ type GrafanaDashboardSpec struct {
 type ModelTemplateConfiguration struct {
 	Title      bool `json:"title,omitempty" protobuf:"bytes,1,opt,name=title"`
 	Datasource bool `json:"datasource,omitempty" protobuf:"bytes,2,opt,name=datasource"`
-}
-
-type TargetRef struct {
-	APIGroup string `json:"apiGroup,omitempty" protobuf:"bytes,1,opt,name=apiGroup"`
-	Kind     string `json:"kind,omitempty" protobuf:"bytes,2,opt,name=kind"`
-	Name     string `json:"name,omitempty" protobuf:"bytes,3,opt,name=name"`
 }
 
 type GrafanaDashboardReference struct {
